@@ -1229,6 +1229,8 @@ hildon_gtk_icon_view_new
 hildon_gtk_icon_view_new_with_model
 hildon_gtk_icon_view_set_ui_mode
 hildon_gtk_window_set_progress_indicator
+HildonPortraitFlags
+hildon_gtk_window_set_portrait_flags
 hildon_gtk_hscale_new
 hildon_gtk_vscale_new
 </SECTION>
